--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^4.0.5"
-  }
+  },
+  "engines": {
+        "node": "12.16.2",
+        "npm": "6.14.4"
+    }
 }
