--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rxjs": "~6.6.0",
     "ts-md5": "^1.2.7",
     "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1001.7",
