--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^4.0.5"
-  }
+  },
+  "engines": {
+        "node": "14.16.0",
+        "npm": "6.14.11"
+    }
 }
