--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/forms": "^10.1.6",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
-    "@angular/router": "^10.1.6",
+    "@angular/animations": "~12.0.1",
+    "@angular/common": "~12.0.1",
+    "@angular/compiler": "~12.0.1",
+    "@angular/core": "~12.0.1",
+    "@angular/forms": "~12.0.1",
+    "@angular/platform-browser": "~12.0.1",
+    "@angular/platform-browser-dynamic": "~12.0.1",
+    "@angular/router": "~12.0.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4",
     "@po-ui/ng-components": "^3.10.0",
     "@po-ui/ng-storage": "^3.10.0",
     "@po-ui/ng-templates": "^3.10.0",
     "@totvs/po-theme": "^3.10.0",
     "jwt-decode": "^3.0.0",
-    "rxjs": "~6.6.0",
     "ts-md5": "^1.2.7",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.10.2",
     "express": "^4.17.1",
     "path": "^0.12.7"
   },
