--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "~4.2.4"
   },
   "engines": {
         "node": "14.16.0",
