--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "@po-ui/ng-components": "^3.10.0",
+    "@po-ui/ng-components": "^5.0.0",
     "@po-ui/ng-storage": "^3.10.0",
     "@po-ui/ng-templates": "^3.10.0",
     "@totvs/po-theme": "^3.10.0",
-    "jwt-decode": "^3.0.0",
-    "ts-md5": "^1.2.7",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "jwt-decode": "^3.0.0",
+    "path": "^0.12.7",
+    "rxjs": "~6.6.0",
+    "ts-md5": "^1.2.7",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.3",
