O erro é por não suportar módulos em nó como "fs" e "path".

--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
   "engines": {
     "node": "14.17.6",
     "npm": "7.5.61"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
