--- a/package.json
+++ b/package.json
@@ -12,47 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cli": "^11.2.19",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@po-ui/ng-components": "^3.10.0",
-    "@po-ui/ng-storage": "^3.10.0",
-    "@po-ui/ng-templates": "^3.10.0",
-    "@totvs/po-theme": "^3.10.0",
+    "@angular/animations": "~19.0.0",
+    "@angular/common": "~19.0.0",
+    "@angular/compiler": "~19.0.0",
+    "@angular/core": "~19.0.0",
+    "@angular/forms": "~19.0.0",
+    "@angular/platform-browser": "~19.0.0",
+    "@angular/platform-browser-dynamic": "~19.0.0",
+    "@angular/router": "~19.0.0",
+    "@po-ui/ng-components": "^19.4.0",
+    "@po-ui/ng-templates": "^19.4.0",
+    "@totvs/po-theme": "^19.4.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "jwt-decode": "^3.0.0",
     "path": "^0.12.7",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.8.0",
     "ts-md5": "^1.2.7",
     "tslib": "^2.0.3",
     "vercel": "^26.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.1.6"
+    "@angular-devkit/build-angular": "~19.0.5",
+    "@angular-devkit/schematics": "~19.0.5",
+    "@angular/cli": "~19.0.5",
+    "@angular/compiler-cli": "~19.0.0",
+    "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.16",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.6.2"
   },
   "engines": {
     "node": "22.14.0",
