--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -49,8 +49,7 @@
     "typescript": "~5.6.2"
   },
   "engines": {
-    "node": "22.14.0",
-    "npm": "7.5.61"
+    "node": "22.14.0"
   },
   "browser": {
     "fs": false,
